--- a/style.css
+++ b/style.css
@@ -2,7 +2,10 @@
 body {
 color: white;
 background: rgb(3, 3, 247);
-margin: 0px; }
+margin: 0px; 
+font-family: "Chakra Petch", sans-serif;
+}
+
  header {
 border-bottom: solid 2px rgb(42, 122, 228);
 padding: 20px;
