--- a/style.css
+++ b/style.css
@@ -4,6 +4,7 @@ color: white;
 background: rgb(3, 3, 247);
 margin: 0px; 
 font-family: "Chakra Petch", sans-serif;
+margin-bottom: 100px;
 }
 
  header {
